--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
-# Compiled class file
+# IntelliJ IDEA files
+.idea/
+*.iml
+*.iws
+
+# Compiled class files
 *.class
 
-# Log file
+# Log files
 *.log
 
 # BlueJ files
@@ -19,6 +24,24 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# Virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# Maven target directory
+target/
+
+# Gradle build directory
+.gradle/
+build/
+
+# IntelliJ-specific Gradle cache
+.gradle/ 
+*.gradle.kts
+
+# Node.js (if applicable)
+node_modules/
+
+# OS-specific files
+.DS_Store
+Thumbs.db
